--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,7 @@
 @import 'variaveis.scss';
 
 *{
-  font-family: 'Biennale Regular';
+  font-family: $fontRegular;
   font-size: 14px;
 }
 
@@ -19,6 +19,49 @@ html, body, #__next {
   display: none;
 }
 
+input{
+  &::placeholder {
+    /*chrome, opera, safari e firefox*/
+    color: $cinza2;
+    opacity: 1;
+  }
+
+  &:-ms-input-placeholder {
+    /*internet Explorer 10 ao 11*/
+    color: $cinza2
+  }
+
+  &::-ms-input-placeholder {
+    color: $cinza2
+  }
+}
+
+.desktop {
+    display: block;
+
+  @media screen and (max-width: calc($desktopBreakpoint - 1px)) {
+    display: none;
+  }
+}
+
+.mobile {
+    display: block;
+
+  @media screen and (max-width: calc($desktopBreakpoint - 1px)) {
+    display: none;
+  }
+}
+
+.mensagemValidacao {
+  display: block;
+  color: $vermelho;
+  font-size: 90%;
+  margin-top: -15px;
+  margin-bottom: 15px;
+}
+
 @import '../../public/Fontes/fontes.scss';
 @import '../../componentes/botao/botao.scss';
-@import '../styles/paginaPublica.scss'
+@import '../styles/paginaPublica.scss';
+@import '../../componentes/inputPublico/inputPublico.scss';
+@import '../pages/cadastro/cadastro.scss';
