--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -78,6 +78,13 @@ strong {
   font-family: $fontBold;
 }
 
+body {
+  @media screen and (min-width: $desktopBreakpoint) {
+    background-color: $cinza5;
+    background-image: url('/imagens/imagemDefundoDesktop.svg') ;
+  }
+}
+
 @import '../../public/Fontes/fontes.scss';
 @import '../../componentes/botao/botao.scss';
 @import '../styles/paginaPublica.scss';
@@ -85,3 +92,4 @@ strong {
 @import '../pages/cadastro/cadastro.scss';
 @import '../../componentes/layout/header.scss';
 @import '../../componentes/layout/rodape.scss';
+@import '../../componentes/feed/feed.scss';
