--- a/src/styles/variaveis.scss
+++ b/src/styles/variaveis.scss
@@ -12,6 +12,7 @@ $cinza1: #DADADA;
 $cinza2: #7C7786;
 $cinza3: #4D4C4D;
 $cinza4: #333333;
+$cinza5: #E5E5E5E5;
 $branco: #fff;
 $vermelho: #FF0000;
 
