--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,6 +3,7 @@
 * {
   font-family: $fontRegular;
   font-size: 14px;
+  text-decoration: none;
 }
 
 html, body, #__next {
@@ -82,6 +83,14 @@ body {
   @media screen and (min-width: $desktopBreakpoint) {
     background-color: $cinza5;
     background-image: url('/imagens/imagemDefundoDesktop.svg') ;
+  }
+}
+
+.largura30pctDesktop {
+  @media screen and (min-width: $desktopBreakpoint) {
+    width: 30%;
+    margin: auto;
+
   }
 }
 
