--- a/componentes/feed/feed.scss
+++ b/componentes/feed/feed.scss
@@ -4,7 +4,6 @@
     margin-top: 16px;
 
     .postagem {
-
         .avatar {
             height: 32px;
             width: 32px;
@@ -61,6 +60,7 @@
                 display: flex;
                 align-items: center;
                 margin-bottom: 6px;
+                cursor: pointer;
 
                 > span {
                     margin-right: 5px !important;
@@ -97,5 +97,33 @@
     }
     @media screen and (min-width: $desktopBreakpoint) {
             padding-top: 8px;
+
+            .postagem {
+                .avatar {
+                    width: 42px;
+                    height: 42px;
+                }
+
+                .rodapeDaPostagem {
+                    .acoesDaPostagem {
+                        > span {
+                            cursor: pointer;
+                        }
+                    }
+                }
+
+                .containerFazerComentario {
+                    margin-top: 12px;
+
+                    .btnPublicacao {
+                        background-color: transparent;
+                        color: $corPrimaria;
+                        outline: none;
+                        border: none;
+                        font-size: 12px;
+                        cursor: pointer;
+                    }
+                }
+            }
     }
 }
