--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -102,3 +102,5 @@ body {
 @import '../../componentes/layout/header.scss';
 @import '../../componentes/layout/rodape.scss';
 @import '../../componentes/feed/feed.scss';
+@import '../../componentes/cabecalhoComAcoes/cabecalhoComAcoes.scss';
+@import '../pages/perfil/perfil.scss'
