--- a/componentes/feed/feed.scss
+++ b/componentes/feed/feed.scss
@@ -9,21 +9,19 @@
             width: 32px;
             margin-right: 8px;
         }
+
         .cabecalhoPostagem {
-           display: flex;
-           align-items: center;
-           padding: 0 12px;
-           margin-bottom: 8px;
-           
-           
+            display: flex;
+            align-items: center;
+            padding: 0 12px;
+            margin-bottom: 8px;
 
             strong {
                 font-size: 12px;
                 color: $cinza4;
             }
-
-
         }
+
         .fotoDaPostagem {
             img {
                 width: 100%;
@@ -35,7 +33,7 @@
 
         .rodapeDaPostagem {
             padding: 5px 16px;
-            
+
             strong.nomeUsuario {
                 font-size: 12px;
                 float: left;
@@ -47,7 +45,7 @@
                 font-size: 12px;
                 margin: 0 0 2px;
                 color: $cinza4;
-                
+
                 .exibirDescricaoCompleta {
                     font-size: 12px;
                     color: $corPrimaria3;
@@ -60,31 +58,36 @@
                 display: flex;
                 align-items: center;
                 margin-bottom: 6px;
-                cursor: pointer;
 
                 > span {
                     margin-right: 5px !important;
                 }
 
-                .quantidadeDeCurtidas {
+                .quantidadeCurtidas {
                     font-family: $fontLight;
                     font-size: 10px;
                     color: $cinza4;
 
                     strong {
                         font-size: 10px;
+                        color: $cinza4;
                     }
                 }
+            }
+
+            .comentariosDaPublicacao {
+                max-height: 100px;
+                overflow-y: auto;
             }
         }
 
         .containerFazerComentario {
             display: flex;
-            padding: 0 12px;
             align-items: center;
+            padding: 0 12px;
             margin-bottom: 16px;
 
-            textarea{
+            textarea {
                 resize: none;
                 flex: 1;
                 max-width: 100%;
@@ -95,35 +98,41 @@
             }
         }
     }
+
     @media screen and (min-width: $desktopBreakpoint) {
-            padding-top: 8px;
+        padding-top: 8px;
+        margin-top: 0px;
 
-            .postagem {
-                .avatar {
-                    width: 42px;
-                    height: 42px;
-                }
+        .postagem {
+            .cabecalhoPostagem {
+                cursor: pointer;
+            }
 
-                .rodapeDaPostagem {
-                    .acoesDaPostagem {
-                        > span {
-                            cursor: pointer;
-                        }
-                    }
-                }
+            .avatar {
+                width: 42px;
+                height: 42px;
+            }
 
-                .containerFazerComentario {
-                    margin-top: 12px;
-
-                    .btnPublicacao {
-                        background-color: transparent;
-                        color: $corPrimaria;
-                        outline: none;
-                        border: none;
-                        font-size: 12px;
+            .rodapeDaPostagem {
+                .acoesDaPostagem {
+                    > span {
                         cursor: pointer;
                     }
                 }
             }
+
+            .containerFazerComentario {
+                margin-top: 12px;
+
+                .btnPublicacao {
+                    background-color: transparent;
+                    color: $corPrimaria;
+                    outline: none;
+                    border: none;
+                    font-size: 12px;
+                    cursor: pointer;
+                }
+            }
+        }
     }
 }
