--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,6 +3,7 @@
 * {
   font-family: $fontRegular;
   font-size: 14px;
+  text-decoration: none;
 }
 
 html, body, #__next {
@@ -81,7 +82,7 @@ strong {
 body {
   @media screen and (min-width: $desktopBreakpoint) {
     background-color: $cinza5;
-    background-image: url('/imagens/imagemDeFundoDesktop.svg');
+    background-image: url('/imagens/imagemDefundoDesktop.svg') ;
   }
 }
 
@@ -89,29 +90,19 @@ body {
   @media screen and (min-width: $desktopBreakpoint) {
     width: 30%;
     margin: auto;
+
   }
 }
 
-.linhaDivisoria {
-  margin: 0;
-  border: none;
-  background-color: $cinza1;
-  height: 1px;
-
-  @media screen and (min-width: $desktopBreakpoint) {
-    margin: 0 auto;
-    width: 94%;
-  }
-}
-
-@import '../componentes/botao/botao.scss';
-@import './paginaPublica.scss';
-@import '../componentes/inputPublico/inputPublico.scss';
+@import '../../public/Fontes/fontes.scss';
+@import '../../componentes/botao/botao.scss';
+@import '../styles/paginaPublica.scss';
+@import '../../componentes/inputPublico/inputPublico.scss';
 @import '../pages/cadastro/cadastro.scss';
-@import '../componentes/layout/cabecalho.scss';
-@import '../componentes/layout/rodape.scss';
-@import '../componentes/feed/feed.scss';
-@import '../componentes/cabecalhoComAcoes/cabecalhoComAcoes.scss';
+@import '../../componentes/layout/cabecalho.scss';
+@import '../../componentes/layout/rodape.scss';
+@import '../../componentes/feed/feed.scss';
+@import '../../componentes/cabecalhoComAcoes/cabecalhoComAcoes.scss';
 @import '../pages/perfil/perfil.scss';
-@import '../pages/publicacao/publicacao.scss';
-@import '../componentes/loading/loading.scss';
+@import '../../src/pages/publicacao/publicacao.scss';
+@import '../../componentes/loading/loading.scss';
